--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown: kramdown
 
 # Site settings
 title: Chunjiang's Blog                     #你博客的标题
-SEOTitle: 春江的个人博客 | Chunjiang's Blog        #显示在浏览器上搜索的时候显示的标题
+SEOTitle:  Chunjiang's Blog | 春江的个人博客       #显示在浏览器上搜索的时候显示的标题
 #header-img: img/.jpg     #显示在首页的背景图片
 email: shichunjiang16@mails.ucas.ac.cn    
 description: "This is Shi,ChunJiang's personal Blog. Here I will put some of my study and research notes.\\ This might be useless to you but help me record my career. "              #网站介绍
